--- a/_posts/2017-10-23-NoName.md
+++ b/_posts/2017-10-23-NoName.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "一个暂时没有名字的项目"
 date:   2017-10-23
-categories: C++ 渗透测试 框架
+categories: C++/C 渗透测试
 permalink: /archivers/2017-10-23/1
 description: "一个暂时没有名字的项目"
 ---
