--- a/_posts/2017-10-24-curl_c++.md
+++ b/_posts/2017-10-24-curl_c++.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "C++调用CURL进行信息搜集"
 date:   2017-10-24
-categories: C++ curl
+categories: C++/C
 permalink: /archivers/2017-10-24/1
 description: "本文简述一下使用C++的libcurl库开发Web信息搜集工具的开发过程。"
 ---
