--- a/_posts/2017-11-19-libghttp.md
+++ b/_posts/2017-11-19-libghttp.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "C++ libghttp库"
 date:   2017-11-19
-categories: C++
+categories: C++/C
 permalink: /archivers/2017-11-19/1
 description: "本文介绍一下C++下一个libghttp库的使用"
 ---
