--- a/_posts/2017-12-06-tplink.md
+++ b/_posts/2017-12-06-tplink.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "TP-LINK Shell调试后门浅析"
 date:   2017-12-06
-categories: tp-link
+categories: 漏洞复现
 permalink: /archivers/2017-12-06/1
 description: "本篇文章介绍一个TP-LINK低版本的一个Shell调试后门"
 ---
