--- a/_posts/2017-11-09-dns.md
+++ b/_posts/2017-11-09-dns.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "DNS信息搜集工具小结"
 date:   2017-11-09
-categories: dns
+categories: 渗透测试
 permalink: /archivers/2017-11-09/1
 description: "本文介绍几个DNS信息搜集工具的使用方法"
 ---
