--- a/_posts/2018-01-22-lj.md
+++ b/_posts/2018-01-22-lj.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "我的丽江之旅"
 date:   2018-01-22
-categories: fuzz
+categories: 生活
 permalink: /archivers/2018-01-22/1
 description: "记录一下我眼中的丽江，不以叙事风格来写，只写我印象最深的它。"
 ---
