--- a/_posts/2018-01-23-libcurl.md
+++ b/_posts/2018-01-23-libcurl.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "封装好的CURL class 尽情享用"
 date:   2018-01-23
-categories: c++/c
+categories: C++/C
 permalink: /archivers/2018-01-23/1
 description: "本篇文章主要是记录一下使用CURL的坑"
 ---
