--- a/_posts/2018-01-30-pen.md
+++ b/_posts/2018-01-30-pen.md
@@ -6190,7 +6190,7 @@ tasklist.exe                  6240                            0      6,256 K Unk
 
 以返回结果猜想一下，不能连接外网肯定是以下几种情况：
 
-* 存在防火墙 [本机软防|网络硬防]
+* 存在防火墙 本机软防 or 网络硬防
 * 没有到达外网的路由 也就是网关 **10.10.10.1**
 
 #### 本地防火墙情况
