--- a/_posts/2018-01-30-pen.md
+++ b/_posts/2018-01-30-pen.md
@@ -1,4 +1,4 @@
- ---
+---
 layout: post
 title:  "针对某跨国企业的一次渗透测试-持续"
 date:   2018-01-22
@@ -8,3 +8,4 @@ description: "本篇文章主要是交流内网渗透方面的技术、未涉及
 ---
 
 文章涉及泄漏厂商隐私，已经删除！
+<!--more-->
