fuzzing with web attack

--- a/_posts/2018-02-05-fuzzing.md
+++ b/_posts/2018-02-05-fuzzing.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Fuzzing With FuzzDB to Web Attack"
 date:   2017-11-08
-categories: FUZZ
+categories: fuzz
 permalink: /archivers/2017-11-08/2
 description: "本文介绍一个使用FUZZDB在Web环境下的测试方法"
 ---
