--- a/_posts/2018-03-05-A_dns.md
+++ b/_posts/2018-03-05-A_dns.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C/C++ 子域名A记录枚举"
+title:  "C/C++ 子域名A记录枚举(多线程)"
 date:   2018-03-05
 categories: C++/C
 permalink: /archivers/2018-03-05/1
