--- a/_posts/2018-03-05-A_dns.md
+++ b/_posts/2018-03-05-A_dns.md
@@ -76,6 +76,9 @@ while(threadLock< Dns->_subdomain.size()){
 
 ## 0x04 源代码
 
+* 源代码地址：http://payloads.online/tools/dns_enum.cpp
+* 字典地址：http://payloads.online/tools/dict.txt
+
 ```cpp
 
 //dns_enum
