--- a/_posts/2018-03-05-A_dns.md
+++ b/_posts/2018-03-05-A_dns.md
@@ -76,7 +76,7 @@ while(threadLock< Dns->_subdomain.size()){
 
 ## 0x04 源代码
 
-* 源代码地址：http://payloads.online/tools/dns_enum.cpp
+* 源代码地址：http://payloads.online/tools/dns_enum.txt
 * 字典地址：http://payloads.online/tools/dict.txt
 
 ```cpp
