--- a/_posts/2018-03-16-getopt.md
+++ b/_posts/2018-03-16-getopt.md
@@ -16,11 +16,14 @@ description: "本文介绍一下Python getopt模块"
 
 ### 铺垫一下基础知识
 我最早接触的脚本语言是asp，但是并没有怎么学习，不过40-50%的代码还是可以看懂的。
+
 之前我唯一掌握的脚本语言是PHP。当时自己想写一个POC，由于不想通过浏览器的形式去访问，我直接把脚本传入脚本解释器去运行，心里很痛快！到后来发觉不怎么方便，每次使用都得去打开文件修改，然后保存，最后执行它。
 
 让我唯一想到的是我接触Ｃ语言的时候，第一个小程序大家都知道，叫"hello world”
 Ｃ语言的代码如下：
-```
+
+```cpp
+
 #include <stdio.h>
 void main(int arg ,char *argv[]){
 printf("hello world !!")
@@ -33,26 +36,36 @@ printf("hello world !!")
 > root@Kali:~#./progrom abc bcd
 > 此时arg为2,arv的元素里就已经包含了[文件名,abc,bcd]
 
-那么文件名就是arv[0]咯～
+那么文件名就是`argv[0]`咯～
+
 当时搞明白了以后就用Ｃ语言写了个文件管理器，但是现在忘的差不多了。
 查阅资料后发现PHP脚本也一样支持，那个问题我就是通过Ｃ语言的特性去解决的。
+
+
 > 在php中是$argc,$argv[]　这两个是预先定义好的变量
 真的发现接触了脚本语言让人懒惰了不少呢，但是也省去了很多造轮子的时间，是人们更加容易学习它。
 
 ### 进阶
+
 好啦，我先简单概述一下python的getopt模块。
+
 如果不想听我叨叨，那就告诉你个小例子：
 ` print(getopt.__doc__) `
 ##### 参数
+
 这个模块一共有两个函数，两个属性
+
 函数：
 
 * getopt.getopt
 * getopt.gnu_getopt
 
 属性：
+
 * getopt.error
 * getopt.GetoptError
+
+
 这两个属性主要是用来抛出错误信息的，非常友好不是吗？
 
 我们主要经常使用getopt这个函数，那下面我们先瞧瞧这个家伙有哪些参数吧！
@@ -68,7 +81,9 @@ printf("hello world !!")
 这个函数返回是一个两元组的列表（复习一下，元组的值是不可修改的！）
 下面我写一个小例子，让你稍微顿悟一下
 
-```
+```python
+
+
 import getopt
 import sys
 
@@ -77,6 +92,7 @@ print(arg)
 ```
 结果如下：
 ```
+
 root@Kali:~/python# python3.5 test.py -h
 ([('-h', '')], [])
 root@Kali:~/python# python3.5 test.py --help
@@ -88,7 +104,10 @@ root@Kali:~/python#
 > 假设我要接收一个参数+参数值的选项怎么办？
 
 再写个小例子！
-```
+
+```python
+
+
 #!/usr/bin/env python3.5
 import urllib.request
 import getopt
@@ -108,8 +127,11 @@ for opt_name,opt_value in opts:
         # do something
         exit()
 ```
+
 运行测试结果如下：
+
 ```
+
 root@Kali:~/python# python3.5 test.py --filename=test
 [*] Filename is  test
 root@Kali:~/python# python3.5 test.py --filename=
@@ -126,19 +148,26 @@ root@Kali:~/python#
 ```
 来详细解释一下这几行代码
 首先从短参数名开始。
-我定义了'-h-f:-v' 大家发现没有，在-f后面多了一个":"
-这个":"代表了当前参数是有值的，是一个参数名+参数值的参数
-如果我再加一个-o: 那么证明-o后面是可以接收一个值，这个值就是-o的参数值，将会保存到opts变量中。
-长参数名的方式和短参数差不多，唯一的区别就是长参数如果要接收值，那必须得在后面加上一个"="
+
+我定义了`'-h-f:-v'` 大家发现没有，在`-f`后面多了一个`":"`
+
+这个`":"`代表了当前参数是有值的，是一个参数名+参数值的参数
+如果我再加一个`-o: `那么证明`-o`后面是可以接收一个值，这个值就是`-o`的参数值，将会保存到`opts`变量中。
+
+长参数名的方式和短参数差不多，唯一的区别就是长参数如果要接收值，那必须得在后面加上一个`"="`
 
 ![运行结果](http://upload-images.jianshu.io/upload_images/3150364-043c5b27c05805e2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ##### 调用问题
+
+
 > 短参数使用的时候是参数名[空格]参数值
 > 长参数使用的时候是参数名=参数值
 > PS:不理解可以看我的测试结果
 
 ##### opts和args
+
+
 * opts 为分析出的格式信息。args 为不属于格式信息的剩余的命令行参数。
 * opts 是一个两元组的列表。每个元素为：( 选项串, 附加参数) 。如果没有附加参数则为空串'' 。 
 
