--- a/_posts/2018-03-21-web.md
+++ b/_posts/2018-03-21-web.md
@@ -68,6 +68,10 @@ description: "准备在博客记录Web安全测试学习手册"
 * 短信验证码绕过
 * 短信验证码重放
 * 业务流程绕过
+* 加密算法脆弱
+* 支付逻辑漏洞
+* 条件竞争(HTTP并发)
+* 前端认证绕过
 
 ## 0x05 身份认证测试
 
