--- a/_posts/2018-03-22-web.md
+++ b/_posts/2018-03-22-web.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "《Web安全测试学习手册》- 远程代码执行"
 date:   2018-03-22
-categories: 网络工程
+categories: Web安全测试学习手册
 permalink: /archivers/2018-03-22/1
 description: "《Web安全测试学习手册》- 远程代码执行"
 ---
