--- a/_posts/2018-03-21-web.md
+++ b/_posts/2018-03-21-web.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "准备在博客记录Web安全测试学习手册"
 date:   2018-03-21
-categories: Web安全测试
+categories: Web安全测试学习手册
 permalink: /archivers/2018-03-21/1
 description: "准备在博客记录Web安全测试学习手册"
 ---
