--- a/_posts/2018-03-21-web.md
+++ b/_posts/2018-03-21-web.md
@@ -15,24 +15,17 @@ description: "准备在博客记录Web安全测试学习手册"
 * 远程代码执行
 * Slow HTTP DDOS
 * 点击劫持：X-Frame-Options头丢失
-* OPTIONS方法启用
 * 服务器启用了不安全的HTTP方法
 * 中间件版本信息泄露
 * 服务器端目录遍历
 * 中间件解析漏洞
 * IIS短文件名漏洞
-* FTP匿名访问
 * 应用程序未容错
-* 危险端口
-* 默认管理后台
 * SVN文件泄露
 * OpenSSL心脏出血漏洞
 * SSL/TLS “受戒礼”漏洞
 * SSL POODLE漏洞
-* 具有弱密钥长度的HTTPS连接
-* 敏感信息泄露
 * 分布式部署文件可读
-* 敏感信息GET方式传输
 
 ## 0x02 数据验证测试
 
@@ -49,7 +42,7 @@ description: "准备在博客记录Web安全测试学习手册"
 * 框架注入
 * 链接注入
 * SSRF服务器请求伪造
-* CSRF跨站脚本伪造
+* CSRF跨站请求伪造
 * 任意URL跳转
 * JSON劫持
 
@@ -58,8 +51,6 @@ description: "准备在博客记录Web安全测试学习手册"
 * 会话固定
 * 多次登录错误锁定机制
 * COOKIE未设置HTTP Only属性
-* COOKIE未加密
-* COOKIE有效期时间过长
 
 ## 0x04 业务逻辑测试
 
