--- a/_posts/2018-03-21-web.md
+++ b/_posts/2018-03-21-web.md
@@ -10,6 +10,9 @@ description: "准备在博客记录Web安全测试学习手册"
 准备在博客记录Web安全测试学习手册，先把目录列出来，之前参考了OWASP测试指南，写了一份Word，但是在Word里不好阐述风险的成因以及危害，所以针对每个风险我会以环境来详细的扣清楚。
 <!--more-->
 
+![Web安全测试学习手册](http://rvn0xsy.oss-cn-shanghai.aliyuncs.com/2018-04-17/0x00.png)
+
+
 ## 0x01 配置管理测试
 
 * 远程代码执行
@@ -76,7 +79,7 @@ description: "准备在博客记录Web安全测试学习手册"
 
 这些测试项参考了OWASP测试指南与AWVS扫描报告 
 
-：D 如果有什么缺陷，还望联系我补充。
+:D 如果有什么缺陷，还望联系我补充。
 
 另外，每一篇的参考链接都会放在文末，只是做一些方便工作归档的整理。
 
