add slow http dos

--- a/_posts/2018-03-21-web.md
+++ b/_posts/2018-03-21-web.md
@@ -16,7 +16,7 @@ description: "准备在博客记录Web安全测试学习手册"
 ## 0x01 配置管理测试
 
 * 远程代码执行
-* Slow HTTP DDOS
+* Slow HTTP DOS
 * 点击劫持：X-Frame-Options头丢失
 * 服务器启用了不安全的HTTP方法
 * 中间件版本信息泄露
