--- a/_posts/2018-04-27-iis.md
+++ b/_posts/2018-04-27-iis.md
@@ -70,6 +70,8 @@ HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\FileSystem
 
 ## 0x05 修复方案
 
+### 通用方案
+
 执行命令（管理员权限）：
 
 ```
@@ -77,4 +79,18 @@ reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\FileSystem\ /
 v "NtfsDisable8dot3NameCreation" /t REG_DWORD /d 1 /f
 ```
 
+### Windows Server 2008 R2
+
+查询是否开启短文件名功能：`fsutil 8dot3name query`
+
+关闭该功能：`fsutil 8dot3name set 1`
+
+### Windows Server 2003
+
+关闭该功能：`fsutil behavior set disable8dot3 1`
+
+### 最后
+
 重启服务器
+
+
