--- a/_posts/2018-05-02-ps.md
+++ b/_posts/2018-05-02-ps.md
@@ -37,14 +37,14 @@ description: "推荐一个Powershell脚本"
     
 描述：该模块主要用于从域中收集用户列表。
 
-* 参数： Domain 指定要测试的域名
-* 参数： RemoveDisabled 尝试从用户列表删除禁用的账户  
-* 参数： RemovePotentialLockouts 删除锁定账户 
-* 参数： UserList 自定义用户列表(字典)。 如果未指定，这将自动从域中获取。
-* 参数： Password 指定单个密码进行口令测试
-* 参数： PasswordList 指定一个密码字典
-* 参数： OutFile 将结果保存到某个文件
-* 参数   Force 当枚举出第一个后继续枚举，不询问
+* 参数： `Domain` 指定要测试的域名
+* 参数： `RemoveDisabled` 尝试从用户列表删除禁用的账户  
+* 参数： `RemovePotentialLockouts` 删除锁定账户 
+* 参数： `UserList` 自定义用户列表(字典)。 如果未指定，这将自动从域中获取
+* 参数： `Password` 指定单个密码进行口令测试
+* 参数： `PasswordList` 指定一个密码字典
+* 参数： `OutFile` 将结果保存到某个文件
+* 参数： `Force` 当枚举出第一个后继续枚举，不询问
 
 ## 0x03 使用说明
 
