add modfiy tomcat response server line

--- a/_posts/2017-11-15-sec.md
+++ b/_posts/2017-11-15-sec.md
@@ -161,6 +161,12 @@ server.built=Dec 1 2015 22:30:46 UTC
 
 ![更改文件](http://rvn0xsy.oss-cn-shanghai.aliyuncs.com/2017-11-15/0x14.png)
 
+或者直接更改`web.xml`，找到`Connector`，添加一个`server`属性：
+
+```xml
+<Connector connectionTimeout="20000" port="8080" protocol="HTTP/1.1" redirectPort="8443" server="IIS Server" />
+```
+
 ### 目录安全
 
 攻击者上传恶意脚本（Webshell）到服务器端后，该脚本会被当做可信任的代码执行，这并不是我们想看到的。
