--- a/_posts/2018-06-21-Trojan.md
+++ b/_posts/2018-06-21-Trojan.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "一次一句话木马解密"
 date:   2018-06-21
-categories: WEB安全
+categories: Web安全
 permalink: /archivers/2018-06-21/1
 description: "本文记录一下一句话木马解密的过程"
 ---
