修改一下分类
Web安全

--- a/_posts/2018-06-22-CDN.md
+++ b/_posts/2018-06-22-CDN.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "在有CDN情况下如何进行有效的子域名枚举"
 date:   2018-06-22
-categories: Web
+categories: Web安全
 permalink: /archivers/2018-06-22/1
 description: "在有CDN情况下如何进行有效的子域名枚举"
 ---
