--- a/_posts/2018-06-22-CDN.md
+++ b/_posts/2018-06-22-CDN.md
@@ -25,7 +25,11 @@ description: "在有CDN情况下如何进行有效的子域名枚举"
 ![Domain](https://rvn0xsy.oss-cn-shanghai.aliyuncs.com/2018-06-22/0x01.png)
 
 
-这个域名是挂了CDN的，我们在枚举的时候，每个域名都能解析，也就是泛解析
+这个域名是挂了CDN的，我们在枚举的时候，每个域名都能解析出结果，并且能返回IP，这都是CDN服务商有一个默认CNAME解析记录
+
+CNAME记录，即：别名记录。这种记录允许您将多个名字映射到同一台计算机。 通常用于同时提供WWW和MAIL服务的计算机。例如，有一台计算机名为“host.mydomain.com”（A记录）。 它同时提供WWW和MAIL服务，为了便于用户访问服务。可以为该计算机设置两个别名（CNAME）：WWW和MAIL。
+-- 百度百科
+
 
 想得到真实能够访问的A记录和CNAME记录，就要分析CDN返回解析数据的特征
 
